--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,5 @@
     -->
   </body>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-    </style>
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');    </style>
 </html>
